# delta-audit

./: CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements.txt
configs/: full_benchmark.yaml  quickstart.yaml
delta-audit/: CITATION.cff  LICENSE
delta-audit/delta_attr_run/code/: utils.py
delta-audit/delta_attr_run/results/results/_summary/: README.md
delta-audit/src/delta_audit/: explainers.py  metrics.py  runners.py
delta_attr_run/code/: auto_audit.py  create_summary_figure.py  run_all.py
delta_attr_run/results/_summary/: delta_summary.csv
delta_attr_run/results/results/_summary/: standard_summary.csv
delta_attr_run/results/results/tables/: summary_by_algo.tex
delta_attr_run/results/tables/: top5_by_DeltaMag_L1.tex
docs/: api.md  benchmarks.md  cli.md  concepts.md  faq.md  getting-started.md  index.md  metrics.md
src/delta_audit/: __init__.py  cli.py  explainers.py  io.py  metrics.py  plotting.py  runners.py
